ajout du jar