@@ -1,4 +1,5 @@
 
 # Lab #2 - Album Photo
 
-
+ligne de commande de test du fichier jar :
+java --module-path /home/clem/TN/2A/PCD/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml,javafx.media -jar ./build/libs/lab2-e4206u.jar
